fixed #title on mobile view
Text now correctly becoming center aligned on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -161,7 +161,7 @@ p {
 /* Custom Styling for Screen Resolution of mobile devices */
 
 @media screen and (max-width: 1028px) {
-  #title {
+  #title .container-fluid {
     text-align: center;
   }
 
